kubernetes/release/namespace.yml
# kubernetes/release/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: release
  labels:
    environment: release
